flaskr/static/blog.css
:root {
  --card-outline-inner: 1.5px solid black;
  --card-outline-outer: 1.0px solid black;
  --card-outline-space: 1px;
}

.blog-card-bs {
  background-color: white;
  margin: 8px 0;
  border-radius: 6px;
  overflow: hidden;

  border:  var(--card-outline-inner);
  outline: var(--card-outline-outer);
  outline-offset: var(--card-outline-space);
}

.blog-title-container {
  cursor: pointer;
  position: relative;
  z-index: 99;
}

.blog-title-container:hover {
  color: var(--color-primary);
}

.blog-title-underline {
  border-top: 1.5px solid var(--color-primary);
  border-bottom: 0.75px solid var(--color-primary);
  height: 0.75px;
  width: 100%;
  transition: transform 0.1s;
  transform: translate(0%, -3px) scaleX(0);
  z-index: -10;
  position: absolute;
  box-sizing: content-box;
}

.blog-title-container:hover .blog-title-underline {
  transform: translate(0%, -3px) scaleX(1);
}

